--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/MarianaTorresTorres/IntroToSWEProject#readme",
   "dependencies": {
     "apollo-server": "^3.6.4",
-    "graphql": "^16.3.0"
+    "graphql": "^16.3.0",
+    "nodemon": "^2.0.15"
   }
 }
