--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/MarianaTorresTorres/IntroToSWEProject#readme",
   "dependencies": {
     "apollo-server": "^3.6.4",
+    "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
+    "mongoose": "^6.2.7",
     "nodemon": "^2.0.15"
   }
 }
