--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   "dependencies": {
     "apollo-server": "^3.6.4",
     "dotenv": "^16.0.0",
+    "googleapis": "^98.0.0",
     "graphql": "^16.3.0",
     "mongoose": "^6.2.7",
+    "newsapi": "^2.4.1",
+    "node-fetch": "2.0",
+    "node-schedule": "^2.1.0",
     "nodemon": "^2.0.15"
   }
 }
