--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.7",
-    "nodemon": "^2.0.15",
-    "server": "^0.0.3"
+    "nodemon": "^2.0.15"
   }
 }
