--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   hexcolor: ^2.0.6
+  graphql_flutter: ^5.1.0
 
 dev_dependencies:
   flutter_test:
