--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -60,6 +60,7 @@ flutter:
     - assets/background.jpeg
     - assets/home-page-bar.png
     - assets/user_default.png
+    - assets/editInterests.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
